--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -1,7 +1,7 @@
 @import "../../utils/commons.scss";
 
 .cardWrapper {
-  height: 100%;
+  // height: 100%;
   width: 100%;
   background: #ffffff;
   border-radius: 10px;
@@ -9,10 +9,10 @@
 
   .header {
     @extend .flexRow;
-    margin-bottom: 10px;
 
     .title {
       font-size: 1rem;
+      margin-bottom: 10px;
       font-weight: 500;
       color: #848484;
     }
