--- a/src/pages/Roles/EditRole/EditRole.module.scss
+++ b/src/pages/Roles/EditRole/EditRole.module.scss
@@ -5,7 +5,10 @@
   width: 100%;
   // padding: 2rem 1.5rem;
 }
-
+.tabHeaders {
+  padding-top: 0.5rem;
+  margin-top: 1rem;
+}
 .tabPanel {
   padding: 1rem 0;
   padding-right: 1rem;
