--- a/src/pages/Roles/EditRole/EditRole.module.scss
+++ b/src/pages/Roles/EditRole/EditRole.module.scss
@@ -22,6 +22,10 @@
     border: none;
   }
 }
+.peopleContainer{
+  margin: 0.5rem 0rem;
+  padding: 1rem 2rem;
+}
 .permissionHeader {
   @extend .flexRow;
   justify-content: space-between;
