date placeholder fixed

--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,10 @@
 .ant-dropdown {
   z-index: 10000;
 }
+
+input[type="date"]:required:invalid::-webkit-datetime-edit {
+  color: transparent;
+}
+input[type="date"]:focus::-webkit-datetime-edit {
+  color: black !important;
+}
