--- a/src/pages/DetailedAnalysis/DetailedAnalysis.module.scss
+++ b/src/pages/DetailedAnalysis/DetailedAnalysis.module.scss
@@ -3,221 +3,6 @@
 .container {
   width: 100%;
 
-  .wrapper {
-    border-radius: 5px;
-    display: flex;
-    flex-direction: column;
-    width: fit-content;
-    min-width: 170px;
-    justify-content: space-evenly;
-    background: rgba(85, 188, 126, 0.2);
-    padding: 0.5rem;
-    position: relative;
-    .content {
-      padding: 0.5rem;
-      p {
-        color: #5c5c5c;
-      }
-      h4 {
-        color: rgb(85, 188, 126);
-        font-size: 3rem;
-        font-weight: 600;
-      }
-    }
-    .icon {
-      position: absolute;
-      width: 25px;
-      right: 0;
-      bottom: 0;
-      margin: 0 1rem 1.5rem 0;
-    }
-    &.successCard {
-      background: #dafde8;
-      .content {
-        h4 {
-          color: var(--clr-success);
-        }
-      }
-    }
-    &.warningCard {
-      background: #fff3d3;
-      .content {
-        h4 {
-          color: var(--clr-warning);
-        }
-      }
-    }
-    &.errorCard {
-      background: #ffe8e8;
-      .content {
-        h4 {
-          color: var(--clr-error);
-        }
-      }
-    }
-    &.primaryCard {
-      background: #dbf0ff;
-      .content {
-        h4 {
-          color: var(--clr-primary);
-        }
-      }
-    }
-  }
-  .topContainer {
-    background-color: white;
-    padding: 2rem;
-
-    width: 100%;
-    .left {
-      h5 {
-        color: rgb(119, 118, 118);
-      }
-    }
-    .right {
-      @extend .flexCol;
-      justify-content: flex-start;
-      align-items: flex-end;
-    }
-    .topRow {
-      @extend .flexRow;
-      justify-content: space-between;
-      align-items: flex-start;
-    }
-    .calendar {
-      cursor: pointer;
-      padding: 5px;
-    }
-    .scheduledFor {
-      display: none;
-      position: absolute;
-      top: 7rem;
-      box-shadow: 0 0 5px rgb(211, 211, 211);
-      background-color: white;
-      padding: 1rem;
-
-      border-radius: 1rem;
-      right: 3rem;
-      p {
-        margin: 5px;
-      }
-    }
-    .calendar:hover + .scheduledFor {
-      display: block;
-      z-index: 1;
-    }
-    .moreInfo {
-      @extend .flexRow;
-      justify-content: flex-start;
-      flex-wrap: wrap;
-      margin: 1rem 0;
-      > div {
-        margin: 0.7rem 0;
-        margin-right: 0.7rem;
-      }
-    }
-  }
-  .sectionWiseAnalysis {
-    background-color: white;
-    margin-top: 1rem;
-    padding: 2rem;
-    .questions {
-      padding: 1rem 0;
-    }
-    .question {
-      @extend .flexRow;
-      align-items: flex-start;
-      margin-top: 2rem;
-      .left {
-        @extend .flexCol;
-        align-items: flex-start;
-        justify-content: flex-start;
-        margin-right: 1rem;
-        h5 {
-          margin-bottom: 2rem;
-        }
-        .options {
-          p {
-            margin: 1rem 0;
-            span {
-              margin-right: 0.6rem;
-            }
-          }
-        }
-      }
-      .right {
-        width: 100%;
-        max-width: 500px;
-        align-self: flex-start;
-        position: relative;
-        @extend .flexCol;
-        padding-left: 1rem;
-        > div {
-          width: 100%;
-        }
-        .header {
-          @extend .flexRow;
-        }
-
-        // button {
-        //   margin-left: auto !important;
-        //   position: absolute;
-        //   right: 0;
-        // }
-        .moreInfo {
-          width: 100%;
-          @extend .flexRow;
-          flex-wrap: wrap;
-          // margin-right: auto;
-          p {
-            margin: 5px 0;
-            font-size: 0.9rem;
-          }
-          .leftMI,
-          .rightMI {
-            @extend .flexCol;
-            align-items: flex-start;
-            width: -moz-fit-content;
-            width: fit-content;
-            margin-right: 1rem;
-            padding: 0;
-          }
-        }
-        .optionPercentageWrapper {
-          margin-top: 2rem;
-        }
-        .optionPercentageContainer {
-          width: 100%;
-
-          @extend .flexRow;
-          justify-content: flex-start;
-          .fullWidth {
-            width: 100%;
-            margin: 5px 0;
-
-            border: 1px solid rgba(black, 0.1);
-          }
-          h5,
-          p {
-            margin: 0;
-            padding: 0 5px;
-            min-width: 55px;
-            max-width: 55px;
-          }
-          h5 {
-            min-width: 20px;
-            max-width: 20px;
-            padding: 0;
-          }
-          // .widthBar {
-          //   background-color: var(--clr-success);
-          //   width: 100%;
-          //   height: 20px;
-          // }
-        }
-      }
-    }
-  }
   .status {
     @extend .flexRow;
     justify-content: flex-start;
@@ -230,6 +15,227 @@
     height: 20px;
     border-radius: 50%;
     margin-right: 0;
+  }
+}
+.topContainer {
+  background-color: white;
+
+  width: 100%;
+  .left {
+    h5 {
+      color: rgb(119, 118, 118);
+    }
+    h2 {
+      text-transform: capitalize;
+    }
+  }
+  .right {
+    @extend .flexCol;
+    justify-content: flex-start;
+    align-items: flex-end;
+  }
+  .topRow {
+    @extend .flexRow;
+    justify-content: space-between;
+    align-items: flex-start;
+  }
+  .calendar {
+    cursor: pointer;
+    padding: 5px;
+  }
+  .scheduledFor {
+    display: none;
+    position: absolute;
+    top: 7rem;
+    box-shadow: 0 0 5px rgb(211, 211, 211);
+    background-color: white;
+    padding: 1rem;
+
+    border-radius: 1rem;
+    right: 3rem;
+    p {
+      margin: 5px;
+    }
+  }
+  .calendar:hover + .scheduledFor {
+    display: block;
+    z-index: 1;
+  }
+  .moreInfo {
+    @extend .flexRow;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    margin: 1rem 0;
+    > div {
+      margin: 0.7rem 0;
+      margin-right: 0.7rem;
+    }
+  }
+}
+.wrapper {
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  width: fit-content;
+  min-width: 170px;
+  justify-content: space-evenly;
+  background: rgba(85, 188, 126, 0.2);
+  padding: 0.5rem;
+  position: relative;
+  .content {
+    padding: 0.5rem;
+    p {
+      color: #5c5c5c;
+    }
+    h4 {
+      color: rgb(85, 188, 126);
+      font-size: 3rem;
+      font-weight: 600;
+    }
+  }
+  .icon {
+    position: absolute;
+    width: 25px;
+    right: 0;
+    bottom: 0;
+    margin: 0 1rem 1.5rem 0;
+  }
+  &.successCard {
+    background: #dafde8;
+    .content {
+      h4 {
+        color: var(--clr-success);
+      }
+    }
+  }
+  &.warningCard {
+    background: #fff3d3;
+    .content {
+      h4 {
+        color: var(--clr-warning);
+      }
+    }
+  }
+  &.errorCard {
+    background: #ffe8e8;
+    .content {
+      h4 {
+        color: var(--clr-error);
+      }
+    }
+  }
+  &.primaryCard {
+    background: #dbf0ff;
+    .content {
+      h4 {
+        color: var(--clr-primary);
+      }
+    }
+  }
+}
+.sectionWiseAnalysis {
+  background-color: white;
+  margin-top: 1rem;
+  padding: 2rem;
+  .questions {
+    padding: 1rem 0;
+  }
+  .question {
+    @extend .flexRow;
+    align-items: flex-start;
+    margin-top: 2rem;
+    .left {
+      @extend .flexCol;
+      align-items: flex-start;
+      justify-content: flex-start;
+      margin-right: 1rem;
+      h5 {
+        margin-bottom: 2rem;
+        @extend .flexRow;
+        align-items: flex-start;
+      }
+      .options {
+        p {
+          margin: 0.3rem 0;
+          @extend .flexRow;
+          justify-content: flex-start;
+          span {
+            // margin-right: 0.6rem;
+          }
+        }
+      }
+    }
+    .right {
+      width: 100%;
+      max-width: 500px;
+      align-self: flex-start;
+      position: relative;
+      @extend .flexCol;
+      padding-left: 1rem;
+      > div {
+        width: 100%;
+      }
+      .header {
+        @extend .flexRow;
+      }
+
+      // button {
+      //   margin-left: auto !important;
+      //   position: absolute;
+      //   right: 0;
+      // }
+      .moreInfo {
+        width: 100%;
+        @extend .flexRow;
+        flex-wrap: wrap;
+        // margin-right: auto;
+        p {
+          margin: 5px 0;
+          font-size: 0.9rem;
+        }
+        .leftMI,
+        .rightMI {
+          @extend .flexCol;
+          align-items: flex-start;
+          width: -moz-fit-content;
+          width: fit-content;
+          margin-right: 1rem;
+          padding: 0;
+        }
+      }
+      .optionPercentageWrapper {
+        margin-top: 2rem;
+      }
+      .optionPercentageContainer {
+        width: 100%;
+
+        @extend .flexRow;
+        justify-content: flex-start;
+        .fullWidth {
+          width: 100%;
+          margin: 5px 0;
+
+          border: 1px solid rgba(black, 0.1);
+        }
+        h5,
+        p {
+          margin: 0;
+          padding: 0 5px;
+          min-width: 55px;
+          max-width: 55px;
+        }
+        h5 {
+          min-width: 20px;
+          max-width: 20px;
+          padding: 0;
+        }
+        // .widthBar {
+        //   background-color: var(--clr-success);
+        //   width: 100%;
+        //   height: 20px;
+        // }
+      }
+    }
   }
 }
 .horizontalLine {
