--- a/src/pages/Result/Result.module.scss
+++ b/src/pages/Result/Result.module.scss
@@ -21,6 +21,7 @@
     margin-bottom: 1.5rem;
     h2 {
       margin-bottom: 0;
+      text-transform: capitalize;
     }
     align-items: center;
     .status {
@@ -45,7 +46,8 @@
     margin-bottom: 3rem;
   }
   .subjectCard {
-    width: 250px;
+    min-width: 250px;
+    flex: 1;
     padding: 1rem 2rem;
     background-color: white;
     border-radius: 10px;
@@ -101,8 +103,11 @@
     margin: 2rem 0;
   }
   .basicInfo {
-    @extend .flexRow;
-    margin: 1rem 0;
+    margin: 2rem 0;
+    > div {
+      @extend .flexRow;
+      width: 100%;
+    }
   }
   // .circularProgress {
   //   border-radius: 50%;
