--- a/src/pages/Pattern/Pattern.module.scss
+++ b/src/pages/Pattern/Pattern.module.scss
@@ -3,8 +3,10 @@
 .container {
   width: 100%;
   margin-top: 0.5rem;
+  padding-bottom: 1rem;
   .header {
     @extend .flexRow;
+    gap: 1rem;
     > div {
       //   flex: 1;
       width: 48%;
