--- a/src/pages/Roles/AddNewRole.module.scss
+++ b/src/pages/Roles/AddNewRole.module.scss
@@ -1,8 +1,7 @@
 @import "../../utils/commons.scss";
 
 .container {
-  width: 500px;
-  padding: 1rem 0;
+  // width: 500px;
   > div {
     width: 100%;
     input {
