--- a/src/pages/Roles/EditRole/EditRole.module.scss
+++ b/src/pages/Roles/EditRole/EditRole.module.scss
@@ -3,6 +3,7 @@
 .editRole {
   // background-color: white;
   width: 100%;
+  padding-bottom: 4rem;
   // padding: 2rem 1.5rem;
 }
 .tabHeaders {
@@ -22,7 +23,7 @@
     border: none;
   }
 }
-.peopleContainer{
+.peopleContainer {
   margin: 0.5rem 0rem;
   padding: 1rem 2rem;
 }
@@ -58,8 +59,15 @@
 .managePeople {
   margin: 1rem 0;
 }
- .modalButtons.actionButtons {
-   width: 100%;
-   @extend .flexRow;
-   justify-content: space-between;
- }
+.modalButtons.actionButtons {
+  width: 100%;
+  @extend .flexRow;
+  justify-content: space-between;
+}
+.floatingUpdateBtn {
+  position: fixed;
+  bottom: 2rem;
+  right: 2rem;
+  z-index: 100;
+  box-shadow: 5px 5px 20px 0px rgba(0, 0, 0, 0.1);
+}
