--- a/src/pages/Questions/Questions.module.scss
+++ b/src/pages/Questions/Questions.module.scss
@@ -4,10 +4,10 @@
   width: 100%;
   padding-bottom: 2rem;
   position: relative;
-  > form {
-    background: white;
-    padding: 1rem 1.5rem;
-    border-radius: 10px;
+  .formContainer {
+    // background: white;
+    // padding: 1rem 1.5rem;
+    // border-radius: 10px;
     margin-top: 1rem;
   }
   .inputFields {
@@ -168,44 +168,40 @@
     text-align: center;
   }
 }
-.submitButton{
+.submitButton {
   text-align: end;
 }
-.toggleButton{
-  width:150px ;
+.toggleButton {
+  width: 150px;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-
 }
-.footer{
+.footer {
   background-color: rgb(245, 245, 245);
-      width: 100%;
-      @extend .flexRow;
-        padding: 10px 15px;
-        position: absolute;
-        justify-content: space-between;
-        bottom: 0;
-        left: 0;
+  width: 100%;
+  @extend .flexRow;
+  padding: 10px 15px;
+  position: absolute;
+  justify-content: space-between;
+  bottom: 0;
+  left: 0;
 }
-.previewBreadCumb{
+.previewBreadCumb {
   @extend .flexRow;
   justify-content: space-between;
   align-items: center;
 
-  .previewBreadCumbDiv{
-    width:50%;
+  .previewBreadCumbDiv {
+    width: 50%;
     @extend .flexRow;
     justify-content: space-between;
-    h4 {      
-        overflow: hidden;
-         max-width: 100px;
-         text-overflow: ellipsis;
-         white-space: nowrap;
-         
-      }
-    
+    h4 {
+      overflow: hidden;
+      max-width: 100px;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+    }
   }
-  
 }
