quickest response and avg time added in individual ques

--- a/src/pages/DetailedAnalysis/DetailedAnalysis.module.scss
+++ b/src/pages/DetailedAnalysis/DetailedAnalysis.module.scss
@@ -155,6 +155,7 @@
         align-items: flex-start;
       }
       .options {
+        width: 100%;
         p {
           margin: 0.3rem 0;
           @extend .flexRow;
