--- a/src/pages/Result/Result.module.scss
+++ b/src/pages/Result/Result.module.scss
@@ -40,13 +40,13 @@
   .cards {
     @extend .flexRow;
     flex-wrap: wrap;
-    justify-content: flex-start;
+    justify-content: space-between;
     gap: 1rem;
     width: 100%;
     margin-bottom: 3rem;
   }
   .subjectCard {
-    min-width: 250px;
+    // min-width: 250px;
     flex: 1;
     padding: 1rem 2rem;
     background-color: white;
@@ -139,7 +139,7 @@
   margin-top: 1rem;
 }
 
-.pieContainer{
-  height: 200px !important;
-  width: 200px !important;
+.pieContainer {
+  max-height: 200px !important;
+  max-width: 200px !important;
 }
