--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -6,6 +6,7 @@
   background: #ffffff;
   border-radius: 10px;
   padding: 1.5rem;
+  overflow: hidden;
 
   .header {
     @extend .flexRow;
@@ -46,4 +47,7 @@
   //   // width: 100%;
   //   // height: auto;
   // }
+}
+.noPadding {
+  padding: 0;
 }
