--- a/src/pages/DetailedAnalysis/DetailedAnalysis.module.scss
+++ b/src/pages/DetailedAnalysis/DetailedAnalysis.module.scss
@@ -187,6 +187,7 @@
       align-items: flex-start;
       justify-content: flex-start;
       margin-right: 1rem;
+      flex: 1;
       h5 {
         margin-bottom: 2rem;
         @extend .flexRow;
