savePattern btn style

--- a/src/pages/Pattern/Pattern.module.scss
+++ b/src/pages/Pattern/Pattern.module.scss
@@ -81,7 +81,7 @@
   .savePatternBtn {
     position: fixed;
     bottom: 2rem;
-    right: calc(var(--margin-due-to-sidebar) + 1rem);
+    right: 2rem;
     background: var(--clr-success) !important;
     color: white;
     padding: 1.2rem;
