view user added in all users

--- a/src/components/UserProfile/UserProfile.module.scss
+++ b/src/components/UserProfile/UserProfile.module.scss
@@ -79,3 +79,15 @@
     }
   }
 }
+.detail{
+  width: 100%;
+  display: grid;
+    grid-template-columns: auto auto;
+    padding: 10px;
+    .value {
+        color: black;
+    }
+    p{
+      padding: 10px;
+    }
+}
