--- a/src/pages/Questions/Questions.module.scss
+++ b/src/pages/Questions/Questions.module.scss
@@ -2,7 +2,7 @@
 
 .container {
   width: 100%;
-  padding-bottom: 2rem;
+  padding: 1.5rem 0;
   position: relative;
   .formContainer {
     // background: white;
@@ -42,6 +42,31 @@
     padding: 1rem 1.5rem;
     border-radius: 10px;
     margin-top: 1rem;
+  }
+  .questionsHeader {
+    @extend .flexCol;
+    width: 100%;
+    .searchAndPrint {
+      @extend .flexRow;
+      justify-content: space-between;
+      width: 100%;
+      padding: 0 1.5rem;
+    }
+    .filters {
+      flex: 1;
+      @extend .flexRow;
+      gap: 10px;
+      width: 100%;
+      margin-top: 1rem;
+      padding: 1rem 1.5rem;
+      background-color: rgba(0, 0, 0, 0.03);
+      > div {
+        flex: 1;
+      }
+    }
+  }
+  .tableContainer {
+    padding: 0 1.5rem;
   }
 }
 
