--- a/src/pages/StudentRegister/StudentRegister.module.scss
+++ b/src/pages/StudentRegister/StudentRegister.module.scss
@@ -2,7 +2,7 @@
 
 .container {
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   @extend .flexRow;
   justify-content: center;
   .content {
@@ -19,5 +19,15 @@
     align-items: stretch;
     gap: 1.5rem;
     margin-top: 2rem;
+  }
+  .regFormGrid{
+    margin-top: 2rem;
+    @extend .flexRow;
+    flex-wrap: wrap;
+    gap:1.5rem;
+    >div{
+      flex: 1;
+      min-width: 200px;
+    }
   }
 }
