batch new fields

--- a/src/pages/Batches/Batches.module.scss
+++ b/src/pages/Batches/Batches.module.scss
@@ -56,7 +56,6 @@
       max-width: 900px;
       padding: 2rem;
 
-    
       button {
         margin: 1rem;
         width: -moz-fit-content;
@@ -122,16 +121,26 @@
     margin-top: 1rem;
   }
 }
-    .inputFields {
-      @extend .flexCol;
-      justify-content: space-between;
-      align-items: baseline;
-      gap: 15px;
-      width: -moz-fit-content;
-      width: fit-content;
-      flex-direction: column;
-      justify-content: space-between;
-      display: flex;
-      flex-wrap: wrap;
-      margin: 10px;
-    }
+.inputFields {
+  @extend .flexCol;
+  justify-content: space-between;
+  align-items: baseline;
+  gap: 15px;
+  width: -moz-fit-content;
+  width: fit-content;
+  flex-direction: column;
+  justify-content: space-between;
+  display: flex;
+  flex-wrap: wrap;
+  margin: 10px 0;
+
+  > div {
+    width: 100%;
+  }
+}
+.buttons {
+  width: 100%;
+  button {
+    width: 100%;
+  }
+}
