--- a/src/pages/Questions/Questions.module.scss
+++ b/src/pages/Questions/Questions.module.scss
@@ -231,10 +231,10 @@
     }
   }
 }
-.questionContainerTable {
-  max-height: 300px;
-  overflow: hidden;
-}
+// .questionContainerTable {
+//   max-height: 300px;
+//   overflow: hidden;
+// }
 .detailsContainer {
   background-color: rgb(250, 250, 250);
   height: 100%;
