--- a/src/pages/Questions/Questions.module.scss
+++ b/src/pages/Questions/Questions.module.scss
@@ -256,4 +256,9 @@
       margin: 0.3em 0;
     }
   }
+  .solutionContainer {
+    margin-top: 1rem;
+    padding: 1rem;
+    background-color: rgba(0, 0, 0, 0.05);
+  }
 }
