created paragraph type question

--- a/src/pages/Questions/Paragraph/Paragraph.module.scss
+++ b/src/pages/Questions/Paragraph/Paragraph.module.scss
@@ -20,3 +20,9 @@
     margin-top: 1rem;
   }
 }
+.paraQuestionsContainer {
+  margin-top: 2rem;
+  background: rgba(0, 0, 0, 0.02);
+  padding: 1rem;
+  border-radius: 0.3rem;
+}
