--- a/src/pages/Questions/Paragraph/Paragraph.module.scss
+++ b/src/pages/Questions/Paragraph/Paragraph.module.scss
@@ -4,7 +4,7 @@
 .container {
   .paragraphEditor {
     hr {
-      border: 1px solid rgb(243, 243, 243);
+      border: 1px solid var(--clr-primary);
     }
     .questionsCounter {
       @extend .flexRow;
