--- a/src/components/UserProfile/UserProfile.module.scss
+++ b/src/components/UserProfile/UserProfile.module.scss
@@ -1,55 +1,52 @@
 @import "../../utils/commons.scss";
 
-
-
-.basicDetailContainer{
+.basicDetailContainer {
   width: 100%;
   display: flex;
   flex-direction: row;
-  gap:25px;
+  gap: 25px;
   justify-content: baseline;
   align-items: center;
-  .basicDetail{
+  .basicDetail {
     @extend .flexCol;
     justify-content: center;
     align-items: baseline;
-    .name{
-      color:black;
+    .name {
+      color: black;
     }
   }
-  .avatar{
+  .avatar {
     width: 70px;
     height: 70px;
     border-radius: 20px;
   }
-
 }
 
-.contact{
+.contact {
   width: 100%;
   @extend .flexRow;
   justify-content: center;
-  position: relative  ;
+  position: relative;
   margin-left: -10px;
-    .line{
-      width: 100%;
-      height:1px;
-      background-color: rgba(203, 203, 203, 1);
-      position: absolute;
-      top:50%;
-      left:10px;
-      z-index: 0;
-    }
-    img{
-      padding: 10px;
-      z-index: 1;
-      background-color: white;
-      border-radius: 38%;
-      border: 1px solid rgba(203, 203, 203, 1);
-    }
+  .line {
+    width: 100%;
+    height: 1px;
+    background-color: rgba(203, 203, 203, 1);
+    position: absolute;
+    top: 50%;
+    left: 10px;
+    z-index: 0;
+  }
+  img {
+    padding: 10px;
+    z-index: 1;
+    background-color: white;
+    border-radius: 38%;
+    border: 1px solid rgba(203, 203, 203, 1);
+  }
 }
 
-.detailContainer{
+.detailContainer {
   margin: 15px 0;
   @extend .flexCol;
   justify-content: baseline;
@@ -57,37 +54,40 @@
   padding: 10px;
   border: 1px solid rgba(203, 203, 203, 1);
   border-radius: 8px;
-  .heading{
+  .heading {
     color: black;
     font-weight: 500;
     padding: 10px 15px;
   }
-  .row{
+  .row {
     width: 100%;
     @extend .flexRow;
     justify-content: flex-start;
-    gap:25px;
+    gap: 25px;
     padding: 15px;
   }
-  .col{
+  .col {
     @extend .flexCol;
     justify-content: flex-start;
     align-items: flex-start;
-    gap:20px;
-    .value{
-      color:black;
+    gap: 20px;
+    .value {
+      color: black;
     }
   }
 }
-.detail{
+.detail {
   width: 100%;
   display: grid;
-    grid-template-columns: auto auto;
+  grid-template-columns: 5rem auto;
+  padding: 10px;
+  .value {
+    color: black;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+  p {
     padding: 10px;
-    .value {
-        color: black;
-    }
-    p{
-      padding: 10px;
-    }
+  }
 }
