--- a/src/pages/Questions/QuestionsNew.module.scss
+++ b/src/pages/Questions/QuestionsNew.module.scss
@@ -262,9 +262,20 @@
     }
   }
 }
+.mainSolutionContainer{
+  display: flex;
+  width: 100%;
+}
+.solutionContainerG {
+  margin-top: 1rem;
+  padding: 0.2rem;
+  background-color: #55BC7E;
+  
+}
 .solutionContainer {
+  width: 100%;
   margin-top: 1rem;
   padding: 1rem;
-  background-color: rgba(0, 0, 0, 0.05);
+  background-color: #55BC7E1A;
   border-radius: 0.3rem;
 }
