--- a/src/pages/Questions/Questions.module.scss
+++ b/src/pages/Questions/Questions.module.scss
@@ -1,5 +1,7 @@
 @import "../../utils/commons.scss";
 
+
+
 .container {
   width: 100%;
   padding: 1.5rem 0;
@@ -51,6 +53,15 @@
       justify-content: space-between;
       width: 100%;
       padding: 0 1.5rem;
+      :global {
+        .ant-input-search .ant-input-group .ant-input-affix-wrapper:not(:last-child) {
+          border-top-left-radius: 6px !important;
+          border-bottom-left-radius: 6px !important;
+        }
+        .ant-input-search > .ant-input-group > .ant-input-group-addon:last-child .ant-input-search-button{
+          border-radius: 0 6px 6px 0 !important;
+        }
+      }
     }
     .searchAndPrint2 {
       @extend .flexRow;
@@ -68,6 +79,11 @@
       background-color: rgba(0, 0, 0, 0.03);
       > div {
         flex: 1;
+      }
+      :global{
+        .ant-select:not(.ant-select-customize-input) .ant-select-selector{
+          border-radius: 6px !important;
+        }
       }
     }
   }
