--- a/src/pages/StudentRegister/StudentRegister.module.scss
+++ b/src/pages/StudentRegister/StudentRegister.module.scss
@@ -30,4 +30,12 @@
       min-width: 200px;
     }
   }
+  nav {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 2rem;
+    justify-content: center;
+  }
 }
