--- a/src/pages/StudentRegister/StudentRegister.module.scss
+++ b/src/pages/StudentRegister/StudentRegister.module.scss
@@ -29,6 +29,10 @@
       flex: 1;
       min-width: 200px;
     }
+    > button {
+      flex: 1;
+      max-width: 240px;
+    }
   }
   nav {
     position: absolute;
