--- a/src/pages/Questions/Questions.module.scss
+++ b/src/pages/Questions/Questions.module.scss
@@ -207,7 +207,10 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-between;
+  justify-content: flex-start;
+  > span {
+    margin-left: 0.5rem;
+  }
 }
 .footer {
   background-color: rgb(245, 245, 245);
