created toggle inside update question, works withupdating too

--- a/src/pages/Questions/Questions.module.scss
+++ b/src/pages/Questions/Questions.module.scss
@@ -309,3 +309,8 @@
     border: 1px solid rgba(0, 0, 0, 0.05);
   }
 }
+.toggleProofRead {
+  @extend .flexRow;
+  justify-content: flex-start;
+  gap: 1rem;
+}
