--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .MuiAutocomplete-endAdornment {
-  /* top: 0 !important; */
+  top: 0 !important;
 }
 .ql-editor {
   white-space: normal !important;
