--- a/src/pages/Test/CreateTest.module.scss
+++ b/src/pages/Test/CreateTest.module.scss
@@ -62,6 +62,12 @@
       margin-left: 1rem;
     }
   }
+  .submitBtn {
+    position: fixed;
+    bottom: 1rem;
+    right: 1rem;
+    z-index: 5;
+  }
 }
 .insertQuestionModal {
   width: 90%;
@@ -106,6 +112,6 @@
     }
   }
 }
-.inputSection{
+.inputSection {
   @extend .flexRow;
 }
