--- a/src/pages/Questions/Objective/Objective.module.scss
+++ b/src/pages/Questions/Objective/Objective.module.scss
@@ -6,11 +6,11 @@
     color: green;
     // font-weight: 700;
     position: relative;
-    &::after {
-      content: "\2713";
-      bottom: 0;
-      position: absolute;
-    }
+    // &::after {
+    //   content: "\2713";
+    //   bottom: 0;
+    //   position: absolute;
+    // }
   }
   .header {
     @extend .flexRow;
@@ -48,6 +48,7 @@
   }
   .tabs {
     margin-top: 1rem;
+    width: 100%;
   }
   .editor {
     margin-top: 1.2rem;
