--- a/src/pages/Questions/Objective/Objective.module.scss
+++ b/src/pages/Questions/Objective/Objective.module.scss
@@ -19,21 +19,21 @@
       font-weight: 600;
       text-transform: uppercase;
     }
-    .languages {
-      @extend .flexRow;
-      // border: 2px solid var(--clr-primary);
-      overflow: hidden;
-      div {
-        padding: 0.3rem 1rem;
-        border-radius: 5px;
-        cursor: pointer;
-        color: rgba(0, 0, 0, 0.4);
-      }
-      .selected {
-        background: var(--clr-primary);
-        color: white;
-      }
-    }
+    // .languages {
+    //   @extend .flexRow;
+    //   // border: 2px solid var(--clr-primary);
+    //   overflow: hidden;
+    //   div {
+    //     padding: 0.3rem 1rem;
+    //     border-radius: 5px;
+    //     cursor: pointer;
+    //     color: rgba(0, 0, 0, 0.4);
+    //   }
+    //   .selected {
+    //     background: var(--clr-primary);
+    //     color: white;
+    //   }
+    // }
   }
   .tabsContainer {
     @extend .flexRow;
