--- a/src/pages/Questions/Questions.module.scss
+++ b/src/pages/Questions/Questions.module.scss
@@ -49,19 +49,16 @@
       @extend .flexRow;
       justify-content: space-between;
       width: 100%;
-<<<<<<< HEAD
       padding: 0 1.5rem;
-      :global {
-        .ant-input-search .ant-input-group .ant-input-affix-wrapper:not(:last-child) {
-          border-top-left-radius: 6px !important;
-          border-bottom-left-radius: 6px !important;
-        }
-        .ant-input-search > .ant-input-group > .ant-input-group-addon:last-child .ant-input-search-button{
-          border-radius: 0 6px 6px 0 !important;
-        }
-      }
-=======
->>>>>>> 271c2c0f2d403bc3f290c779c0866ac4d7879d3b
+      // :global {
+      //   .ant-input-search .ant-input-group .ant-input-affix-wrapper:not(:last-child) {
+      //     border-top-left-radius: 6px !important;
+      //     border-bottom-left-radius: 6px !important;
+      //   }
+      //   .ant-input-search > .ant-input-group > .ant-input-group-addon:last-child .ant-input-search-button{
+      //     border-radius: 0 6px 6px 0 !important;
+      //   }
+      // }
     }
     .searchAndPrint2 {
       @extend .flexRow;
