--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -6,6 +6,9 @@
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
 }
+a {
+  text-decoration: none;
+}
 
 :root {
   --clr-primary: #61b4f1;
