custom-date-range-picker time working and style reset

--- a/src/components/CustomDateRangePicker/CustomDateRangePicker.module.scss
+++ b/src/components/CustomDateRangePicker/CustomDateRangePicker.module.scss
@@ -1,7 +1,7 @@
-.CustomDateRangePicker {
-  padding: 1rem;
-  background: transparent;
-  border-radius: 5px;
-  color: rgba(0, 0, 0, 0.7);
-  border-color: rgba(0, 0, 0, 0.3);
-}
+// .CustomDateRangePicker {
+//   padding: 1rem;
+//   background: transparent;
+//   border-radius: 5px;
+//   color: rgba(0, 0, 0, 0.7);
+//   border-color: rgba(0, 0, 0, 0.3);
+// }
