migration design complete

--- a/src/pages/Test/CreateTest.module.scss
+++ b/src/pages/Test/CreateTest.module.scss
@@ -29,6 +29,7 @@
 
   .sections {
     margin-top: 1rem;
+    padding-bottom: 2rem;
     .section {
       background: white;
       border-radius: 0.3rem;
