Register Student UI shifted from material UI to antd

--- a/src/pages/StudentRegister/StudentRegister.module.scss
+++ b/src/pages/StudentRegister/StudentRegister.module.scss
@@ -6,7 +6,7 @@
   @extend .flexRow;
   justify-content: center;
   .content {
-    max-width: 80vw;
+    max-width: 40%;
     width: 100%;
     h2 {
       text-align: center;
