--- a/src/pages/Profile/Profile.module.scss
+++ b/src/pages/Profile/Profile.module.scss
@@ -63,3 +63,9 @@
     background: rgba(0, 0, 0, 0.06);
   }
 }
+.nameAndUserType {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 5rem;
+}
