--- a/src/pages/Test/CreateTest.module.scss
+++ b/src/pages/Test/CreateTest.module.scss
@@ -62,13 +62,15 @@
   }
   .searchHeader {
     @extend .flexRow;
+    margin-top: 0.5rem;
     .addQuestion {
       flex: 1;
-      background: white;
-      text-align: center;
-      padding: 0.6rem 0;
-      border-radius: 0.2rem;
-      cursor: pointer;
+      // background: white;
+      // text-align: center;
+      // padding: 0.6rem 0;
+      // border-radius: 0.2rem;
+      // cursor: pointer;
+      margin: 0;
     }
     button {
       margin-left: 1rem;
@@ -126,4 +128,17 @@
 }
 .inputSection {
   @extend .flexRow;
+  > div {
+    flex: 1;
+    margin-right: 0.5rem;
+
+    &:last-child {
+      margin-right: 0;
+    }
+
+    .inputNumber {
+      width: 100%;
+    }
+  }
+  margin-top: 1rem;
 }
