--- a/src/pages/Test/CreateTest.module.scss
+++ b/src/pages/Test/CreateTest.module.scss
@@ -142,3 +142,37 @@
   }
   margin-top: 1rem;
 }
+
+.questionsHeader {
+  @extend .flexCol;
+  width: 100%;
+  margin: 1rem 0;
+  .searchAndPrint {
+    @extend .flexRow;
+    justify-content: space-between;
+    width: 100%;
+    padding: 0 1.5rem;
+  }
+  .searchAndPrint2 {
+    @extend .flexRow;
+    justify-content: end;
+    width: 100%;
+  }
+  .filters {
+    flex: 1;
+    @extend .flexRow;
+    gap: 10px;
+    width: 100%;
+    margin-top: 1rem;
+    padding: 1rem 1.5rem;
+    background-color: rgba(0, 0, 0, 0.03);
+    > div {
+      flex: 1;
+    }
+    :global {
+      .ant-select:not(.ant-select-customize-input) .ant-select-selector {
+        border-radius: 6px !important;
+      }
+    }
+  }
+}
