--- a/src/pages/Test/CreateTest.module.scss
+++ b/src/pages/Test/CreateTest.module.scss
@@ -146,7 +146,6 @@
   margin-top: 1rem;
 }
 
-
 .questionsHeader {
   @extend .flexCol;
   width: 100%;
@@ -179,8 +178,18 @@
       }
     }
   }
-
 }
 .tableContainer {
   width: 100%;
+}
+.questionsAddedCount {
+  @extend .flexRow;
+  justify-content: flex-end;
+  p {
+    font-size: 0.9rem;
+    text-transform: capitalize;
+  }
+  > p:not(:last-child) {
+    margin-right: 1rem;
+  }
 }
