--- a/src/pages/StudentRegister/StudentRegister.module.scss
+++ b/src/pages/StudentRegister/StudentRegister.module.scss
@@ -8,6 +8,7 @@
   .content {
     max-width: 40%;
     width: 100%;
+    margin-top: 5rem;
     h2 {
       text-align: center;
       margin: 2rem 0;
