--- a/src/pages/PasswordReset/PasswordReset.module.scss
+++ b/src/pages/PasswordReset/PasswordReset.module.scss
@@ -5,61 +5,18 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
-  form {
-    @extend .flexCol;
-    justify-content: center;
-    gap: 15px;
 
-    // background: rgba(0, 0, 0, 0.04);
-    border-radius: 5px;
-    // padding: 1.5rem;
-    position: relative;
-    padding-bottom: 0.5rem;
-    overflow: hidden;
-
-    > div {
-      margin: 0.5rem 0;
-    }
-    input {
-      min-width: 300px;
-    }
-    button {
-      width: 100%;
-      margin-top: 0.5rem;
-    }
-
-    .error {
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      width: 100%;
-      // height: 1rem;
-      padding: 0.2rem;
-      text-align: center;
-      background: var(--clr-error);
-      color: white;
-    }
-
-    .loading {
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      width: 100%;
-      height: 1rem;
-      padding: 0.2rem;
-      text-align: center;
-      // background: var(--clr-error);
-      color: white;
-    }
-  }
   .formContainer {
     @extend .flexCol;
     gap: 35px;
     justify-content: flex-start;
     align-items: center;
     border: 1px solid rgba(0, 0, 0, 0.2);
-    padding: 4% 4%;
+    padding: 2rem 3rem;
     border-radius: 10px;
+    width: 450px;
+    max-width: 90%;
+
     .logo {
       height: 60px;
     }
@@ -67,12 +24,41 @@
       color: rgba(117, 117, 117, 1);
       font-weight: 400;
       font-size: 15px;
+      text-align: center;
     }
     a {
       color: rgba(185, 185, 185, 1);
     }
     .actionBtns {
       width: 100%;
+    }
+    > div {
+      width: 100%;
+    }
+    .extras {
+      width: 100%;
+      > button {
+        width: 100%;
+        &:last-of-type {
+          margin-top: 0.5rem;
+        }
+      }
+    }
+
+    @media screen and (max-width: 768px) {
+      padding: 2rem 1rem;
+    }
+  }
+  .form {
+    width: 100%;
+    > div {
+      width: 100%;
+    }
+    > div:last-of-type {
+      button {
+        width: 100%;
+      }
+      margin-bottom: 1rem;
     }
   }
 }
