--- a/src/pages/Result/Result.module.scss
+++ b/src/pages/Result/Result.module.scss
@@ -40,7 +40,7 @@
   .cards {
     @extend .flexRow;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: flex-start;
     gap: 1rem;
     width: 100%;
     margin-bottom: 3rem;
